build/log/idf_py_stdout_output_22554
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/danielsterzel/esp/wifi/build/bootloader/esp-idf/esptool_py && /Users/danielsterzel/.espressif/python_env/idf5.5_py3.9_env/bin/python /Users/danielsterzel/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/danielsterzel/esp/wifi/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/danielsterzel/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/danielsterzel/esp/wifi/build/config -I/Users/danielsterzel/esp/wifi/main -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/newlib/platform_include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/freertos/config/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/heap/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/heap/tlsf -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/log/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/soc/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/soc/esp32 -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/soc/esp32/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/soc/esp32/register -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/hal/platform_port/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/hal/esp32/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/hal/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_rom/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include/esp32 -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_rom/esp32 -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_common/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_system/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_system/port/soc -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/xtensa/esp32/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/xtensa/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/lwip/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/lwip/include/apps -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/lwip/include/apps/sntp -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/lwip/lwip/src/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/lwip/port/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/lwip/port/freertos/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_wifi/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_wifi/include/local -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_event/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_phy/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_phy/esp32/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_netif/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/nvs_flash/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_partition/include -I/Users/danielsterzel/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/danielsterzel/esp/wifi=. -fmacro-prefix-map=/Users/danielsterzel/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /Users/danielsterzel/esp/wifi/main/main.c
/Users/danielsterzel/esp/wifi/main/main.c:168:6: error: redefinition of 'app_main'
  168 | void app_main(void)
      |      ^~~~~~~~
/Users/danielsterzel/esp/wifi/main/main.c:128:6: note: previous definition of 'app_main' with type 'void(void)'
  128 | void app_main(void)
      |      ^~~~~~~~
ninja: build stopped: subcommand failed.
